[package]
name = "another_rusty_world"
version = "0.1.0"
edition = "2024"
author = ["Francesco Marino <franzmarino89@gmail.com>"]
description = "Another rust interpreter for 'Another World' because... why not?"

[dependencies]
winit = "0.29"
softbuffer = "0.4"
thiserror = "2.0.12"
num_enum = "0.7.3"
byteorder = "1.5.0"
strum = { version = "0.27", features = ["derive"] }
iter-read = "1.1.0"
rand = "0.9.1"
clap = { version= "4.5.40", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
